--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "any-promise": "^1.3.0",
     "anymatch": "^3.1.3",
     "arg": "^5.0.2",
-    "autoprefixer": "^10.4.20",
     "balanced-match": "^1.0.2",
     "binary-extensions": "^2.3.0",
     "brace-expansion": "^2.0.1",
@@ -81,8 +80,6 @@
     "picomatch": "^2.3.1",
     "pify": "^2.3.0",
     "pirates": "^4.0.6",
-    "postcss": "^8.4.41",
-    "postcss-cli": "^11.0.0",
     "postcss-import": "^15.1.0",
     "postcss-js": "^4.0.1",
     "postcss-load-config": "^5.1.0",
@@ -109,7 +106,6 @@
     "strip-ansi-cjs": "^6.0.1",
     "sucrase": "^3.35.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
-    "tailwindcss": "^3.4.7",
     "thenby": "^1.3.4",
     "thenify": "^3.3.1",
     "thenify-all": "^1.6.0",
@@ -133,5 +129,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "tailwindcss": "^3.4.19"
+  }
 }
